--- a/app/src/main/res/layout/fragment_home_home.xml
+++ b/app/src/main/res/layout/fragment_home_home.xml
@@ -43,17 +43,23 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="New Arrifals"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/fire_icon_removebg" />
+
         <TextView
             android:id="@+id/textView8"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
+            android:textAlignment="textEnd"
             android:text="See all"
             android:textColor="#52185C"
             android:textSize="16sp" />
@@ -68,18 +74,10 @@
             android:id="@+id/viewArrifals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ProgressBar
-            android:id="@+id/progressBarArrifals"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/viewArrifals"
-            app:layout_constraintTop_toTopOf="@+id/viewArrifals" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
