--- a/app/src/main/res/layout/activity_detail1.xml
+++ b/app/src/main/res/layout/activity_detail1.xml
@@ -167,7 +167,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/add1"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
                         android:layout_marginEnd="10dp"
@@ -180,19 +180,19 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView14"
+                        android:id="@+id/count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                        app:layout_constraintEnd_toEndOf="@+id/textView12"
-                        app:layout_constraintStart_toStartOf="@+id/textView15"
-                        app:layout_constraintTop_toTopOf="@+id/textView12" />
+                        app:layout_constraintBottom_toBottomOf="@+id/add1"
+                        app:layout_constraintEnd_toEndOf="@+id/add1"
+                        app:layout_constraintStart_toStartOf="@+id/sub1"
+                        app:layout_constraintTop_toTopOf="@+id/add1" />
 
                     <TextView
-                        android:id="@+id/textView15"
+                        android:id="@+id/sub1"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
                         android:layout_marginStart="10dp"
