--- a/app/src/main/res/layout/bottom_sheet_forgotpass.xml
+++ b/app/src/main/res/layout/bottom_sheet_forgotpass.xml
@@ -26,7 +26,7 @@
         android:text="@string/enter_your_email_or_phone_number" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/add1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Your email"
