--- a/app/src/main/res/layout/fragment_mycart.xml
+++ b/app/src/main/res/layout/fragment_mycart.xml
@@ -36,63 +36,88 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_cart_item"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                >
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:visibility="invisible"
+                        android:id="@+id/rcv_cart_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+            </ScrollView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/layout_checkout"
+                android:visibility="invisible"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="right"
+                app:cardCornerRadius="24dp"
+                >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+
+                    <TextView
+                        android:id="@+id/total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total: 99"
+                        android:layout_marginRight="8dp"
+                        android:textColor="@color/main_purple"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:layout_marginLeft="8dp"/>
+
+                    <ImageView
+                        android:id="@+id/detailCheckout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/icons8_up_10"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="8dp"/>
+
+                    <Button
+                        android:id="@+id/btCheckOut1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="CHECKOUT"
+                        android:onClick="onClickCheckout"/>
+
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+        <ProgressBar
+            android:id="@+id/prbCart"
+            style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
-    </ScrollView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/layout_checkout"
-        android:visibility="invisible"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_gravity="right"
-        app:cardCornerRadius="24dp"
-        >
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
-
+            android:layout_gravity="center_vertical"/>
         <TextView
-            android:id="@+id/total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Total: 99"
-            android:layout_marginRight="8dp"
-            android:textColor="@color/main_purple"
-            android:textStyle="bold"
-            android:textSize="16dp"
-            android:layout_marginLeft="8dp"/>
-
-        <ImageView
-            android:id="@+id/detailCheckout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/icons8_up_10"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="8dp"/>
-
-        <Button
-            android:id="@+id/btCheckOut1"
+            android:visibility="invisible"
+            android:id="@+id/noProduct"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CHECKOUT"
-            android:onClick="onClickCheckout"/>
+            android:layout_height="match_parent"
+            android:textAlignment="center"
+            android:gravity="center_vertical"
+            android:text="Your shopping cart is empty!"
+            tools:ignore="RtlCompat" />
+    </FrameLayout>
 
 
-    </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
 
