--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="navigation_myorder" type="id" />
     <item name="rc_cart_item" type="id" />
+    <item name="detail" type="id" />
 </resources>
